nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: test
spec:
  rules:
  - host: myfirst.sample
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 80
        path: /sample
        pathType: Prefix
